COMPILE_DEPS = CORE_DEPS + JACKSON + REST + [
    "//core/common:onos-core-common",
]

osgi_jar_with_tests(
    deps = COMPILE_DEPS,
)

REQUIRE_APPS = [
    "org.onosproject.proxyarp",
]

onos_app(
    category = "Packet Forwrader amir",
    description = "Intent amir amir",
    required_apps = REQUIRE_APPS,
    title = "Amir Packet Forwarder",
    url = "https://www.ict.com",
)
